2009-08-21  Adele Peterson  <adele@apple.com>

        Reviewed by Mark Rowe.

        <rdar://problem/7162322> Custom style sheet ignored if UAC is enabled 

        * platform/win/SharedBufferWin.cpp: (WebCore::SharedBuffer::createWithContentsOfFile): 
        No need to open the file with write access.  Only read access is needed.

2009-08-21  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        <rdar://problem/7161454> Leaks seen during http/tests/xmlhttprequest/cross-origin-no-authorization.html

        Also fixes leaks seen on appcache tests.

        * platform/network/mac/ResourceHandleMac.mm: (WebCore::ResourceHandle::cancel): Work around
        something that's likely a CFNetwork issue. Note that on Windows, there is no matching API
        to call, and we do not think that the leak occurs there anyway.

2009-08-21  Dmitry Titov  <dimich@chromium.org>

        Reviewed by David Levin.

        https://bugs.webkit.org/show_bug.cgi?id=28650
        Remove cross-thread code from CrossOriginPreflightResultCache.
        Removed mutexes, atomic initializer and string copy.

        No new tests, the worker tests cover this.

        * loader/CrossOriginPreflightResultCache.cpp:
        (WebCore::addToAccessControlAllowList):
        (WebCore::CrossOriginPreflightResultCache::shared):
        (WebCore::CrossOriginPreflightResultCache::appendEntry):
        (WebCore::CrossOriginPreflightResultCache::canSkipPreflight):
        (WebCore::CrossOriginPreflightResultCache::empty):
        * loader/CrossOriginPreflightResultCache.h:

2009-08-21  Michelangelo De Simone  <micdesim@gmail.com>

        Reviewed by Jan Alonzo.

        Buildfix after http://trac.webkit.org/changeset/47655.

        * html/HTMLFormControlElement.h:

2009-08-19  Joseph Pecoraro  <joepeck@webkit.org>

        Reviewed by Timothy Hatcher.

        Inspector: Improve Cookie DataGrid to Show Hidden Data
        https://bugs.webkit.org/show_bug.cgi?id=28269
